Changelog:
==========

1.90.1 - 2013-??-??

    Engines:
        - FFMpeg Web Video and FFmpeg Web Audio:
            - Fix issue that prevented plugins extending FFmpegWebAudio and FFmpegWebVideo safely
        - MEncoder Video:
            - Fix for spaces in font names breaking playback 

    Misc:
        - Restored Java support for file names with special characters on Mac OS X.

1.90.0 - 2013-07-31

    Engines:
        - FFmpeg Video, FFmpeg Web Audio and FFmpeg Web Video:
            - Add FFmpeg Web Audio engine
            - General improvements of usability and stability
            - Support for lossless video remuxing if supported by renderer
            - Support for AC-3 and DTS audio tracks remuxing
            - Support for external SRT and SSA/ASS subtitles
            - Support for auto charset detection of non UTF-8 external subtitles
        - tsMuxeR:
            - Regression: restore the pre-1.82.0 compatibility logic
        - VLC Web Video:
            - Fix NPE
            - Support for external subtitles (thanks, tdcosta100!)

    Renderers:
        - Xbox 360: improved quality
        - Improved Sony Blu-ray Player support (thanks, skeptical)
        - Send thumbnails properly to Samsung 2012 ES and EH models (thanks, dmitche3!)
        - Added renderer profiles (thanks, UMS developers):
            - KalemSoft Media Player
            - Netgear NeoTV
            - Onkyo TX-NR717
            - Sharp Aquos TVs
            - Showtime 4 PS3 homebrew player
            - Sony Bravia EX620 series TVs
            - Sony Bravia W6/W8/W9 (thanks, gui17aume)
            - Sony Home Theatre Systems
            - Telstra T-Box
            - VideoWeb TV
            - Vizio Smart TV
            - Yamaha RX-V3900

    Transcode folder:
        - Add entries for audio files
        - Add missing entries for video files
        - Add entries for web video and web audio files
        - Allow the chapter folder prefix to be localized